--- a/DOM/todolist/style.css
+++ b/DOM/todolist/style.css
@@ -1,22 +1,33 @@
+html {
+    font-family: Arial, sans-serif;
+}
+
 .texte-todo {
+    width: 100%;
+    display: block;
     margin: 0.1rem;
 }
 
+.buttons {
+    margin-top: 1rem;
+}
+
 .ajouter-todo, .supprimer-tout {
-    background-color: blue;
+    background-color: #3598DB;
     color: white;
     border-radius: 5px;
     margin: .1rem;
+    padding: .5rem;
 }
 
 .mes-todo {
     padding: 0;
 }
 
-.styleToDo {
+li {
     max-width: 100%;
     background-color: white;
-    color: blue;
+    color: #3598DB;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 1rem;
@@ -26,4 +37,6 @@
 
 .lineThrough {
     text-decoration: line-through;
+    background-color: #3598DB;
+    color: white;
 }
